# graphGP-cosmology

./: .gitignore  IMPLEMENTATION_PLAN.md  LITERATURE.md  README.md  app.py  generate_log_delta_results.py  graphGP_cosmo.py  requirements.txt  synthetic_test.py
demos/: build_desi_completeness_map.py  build_knn_cdf_desi_quaia_presentation.py  build_presentation.py  demo_3pt_lisa.py  demo_ap_sensitivity.py  demo_basis_ap_sensitivity.py  demo_cascade_vs_original.py  demo_compare_cone_shell_vs_xi.py  demo_cosmology_xi.py  demo_desi_qso_bao.py  demo_dsigma2_dR.py  demo_hod_xi.py  demo_joint_fit.py  demo_pair_quadrupole.py  demo_pair_tensor.py  demo_part1_binned.py  demo_quaia_bao.py  demo_quaia_bao_analytic.py  demo_quaia_bao_filter.py  demo_quaia_bao_harmonic.py  demo_quaia_bz_continuous.py  demo_quaia_bz_evolution.py  demo_quaia_bz_sf21.py  demo_quaia_cascade_xi.py  demo_quaia_clustering.py  demo_quaia_evolution.py  demo_quaia_lensing.py  (+16 more)
morton_cascade/: Cargo.toml  README.md  SESSION_STATE.md  cascade_plot.py  cascade_plot_v3.py  cascade_plot_v4.py  compare_corrfunc.py  compare_corrfunc_3d.py  compare_corrfunc_multi.py  diag_axis_vs_angle.py  headline_comparison.py  multi_axis_vs_angle.py  pmf_cox_plot.py  scaling_3d_cf.py  sigma2_2d.py  sigma2_3d.py  sigma2_3d_scaling.py
morton_cascade/docs/: differentiable_cascade.md  parallelism.md
morton_cascade/examples/: anisotropy_benchmark.py  bench_bitvec.rs  bench_default_vs_old.rs  bench_phase1.rs  bench_threshold_scan.rs  bench_threshold_sweep.rs  benchmark_packed.rs  bispectrum_benchmark.py  common.rs  confirm_alloc.rs  diag_dups.rs  diag_dups_good.rs  diag_ls_xi.rs  diag_rr_only.rs  diag_tiny.rs  dr_debug.rs  field_stats_demo.rs  fingerprint_export.rs  hipster_bispectrum_benchmark.py  hipster_real_benchmark.py  monopole_benchmark.py  multi_run_demo.rs  optimize_data_weights.rs  optimize_data_weights_logloss.rs  optimize_data_weights_newton_cg.rs  parity_benchmark.py  patchy_mock_benchmark.py  per_particle_attribution.rs  pmf_cox_demo.rs  profile_field_stats_gradient.rs  profile_multi_run.rs  profile_pmf_windows.rs  test_3d.rs  test_nd.rs  xi_graphgp_fit.py  xi_smoke.rs
morton_cascade/src/: all_shifts.rs  angular_knn_cdf.rs  anisotropy_gradient.rs  cascade_visitor.rs  cell_kernels.rs  cell_membership.rs  compensated_sum.rs  coord_range.rs  field_stats_gradient.rs  hier.rs  hier_3d.rs  hier_bitvec.rs  hier_bitvec_pair.rs  hier_nd.rs  hier_packed.rs  hier_par.rs  jvp.rs  lib.rs  xi_gradient.rs
morton_cascade/src/multi_run/: mod.rs  xi_continuous.rs
morton_cascade/tests/: integration.rs
(+90 files in other folders)
